--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -60,7 +60,7 @@ header {
 .scroll__down {
     position: absolute;
     right: -2.3rem;
-    bottom: 5rem;
+    bottom: 0rem;
     text-decoration: none;
     transform: rotate(90deg);
     font-size: 0.9rem;
@@ -71,9 +71,13 @@ header {
     .section-header {
         height: 100vh;
         padding-bottom: 0rem;
+        background-color: black;
+        
     }
     .me {
+        
         margin-left: 16%;
+        
     }
     .header__socials {
         margin-top: 1rem;
@@ -81,8 +85,9 @@ header {
 }
 @media screen and (max-width: 600px) {
     .section-header {
-        height: 100vh;
+        height: 1zz00vh;
         padding-bottom: 0rem;
+        
     }
 
     .header__socials {
